# fish-audio-python

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  python.yml
examples/: README.md  getting_started.ipynb
examples/getting-started/: 01_simple_tts.py  02_play_audio.py  03_check_credits.py
scripts/: copy_docs.py
src/fish_audio_sdk/: __init__.py  apis.py  exceptions.py  io.py  schemas.py  websocket.py
src/fishaudio/: __init__.py  _version.py  client.py  exceptions.py
src/fishaudio/core/: __init__.py  client_wrapper.py  iterators.py  omit.py  request_options.py  websocket_options.py
src/fishaudio/resources/: __init__.py  account.py  asr.py  realtime.py  tts.py  voices.py
src/fishaudio/types/: __init__.py  account.py  asr.py  shared.py  tts.py  voices.py
src/fishaudio/utils/: __init__.py  play.py  save.py  stream.py
tests/: conftest.py  test_apis.py  test_websocket.py
tests/integration/: conftest.py  test_account_integration.py  test_asr_integration.py  test_tts_integration.py  test_tts_websocket_integration.py  test_voices_integration.py
tests/unit/: conftest.py  test_account.py  test_asr.py  test_client.py  test_core.py  test_realtime.py  test_tts.py  test_tts_realtime.py  test_types.py  test_utils.py  test_voices.py
